tests/ui/bitfield/flags_out_of_bounds.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/bitfield/flags_out_of_bounds.rs:5:1
  |
5 | #[bitfield::bitfield(8)] // Can only store flags between 0 - 7.
  | ^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'Flags in field 0 exceed the bitfield size', $DIR/tests/ui/bitfield/flags_out_of_bounds.rs:5:1
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)
